Fix `app-container` padding
It had a horizontal scrollbar on anything smaller than my Macbook air screen.

Not good. But it's fixed now

--- a/src/styles/components/App.scss
+++ b/src/styles/components/App.scss
@@ -3,8 +3,9 @@
 .app-container {
   width: 100%;
   max-width: 1200px;
+  box-sizing: border-box;
   margin: 0 auto;
-  padding: 40px 100px;
+  padding: 40px 50px;
   .app-title-wrapper {
     width: 100%;
     display: flex;
